Adjust font size for better icon visibility and update Font Awesome URL to fix mobile icon display issue.
- Increase font size to 20px for improved icon visibility.
- Update Font Awesome URL with version query parameter to resolve mobile icon display problem.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -104,6 +104,10 @@ body {
     justify-content: center;
     align-items: center;
 
+    // Fix the font size so that the icon does not get small as the text of the page
+    // becomes smaller due to decreasing screen width
+    font-size: 20px;
+
     border-radius: 5px;
     border-width: 0px;
 
